# claude_rank

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  clean-reset.sh  dev.ts  package.json
.claude-plugin/: marketplace.json
.github/workflows/: build.yml  release.yml
backend/: render.yaml  requirements.txt
backend/app/: db.py  main.py  models.py
backend/app/routes/: badges.py  hot.py  leaderboard.py  sync.py  teams.py  users.py
backend/app/services/: badge_engine.py  hotness.py  ranking.py
claude-code-plugin/: .mcp.json  mcp-bootstrap.mjs  mcp-server.mjs  package-lock.json  package.json
claude-code-plugin/.claude-plugin/: plugin.json
claude-code-plugin/commands/: authenticate.md  badges.md  history.md  leaderboard.md  profile.md  rank.md  setup.md  stats.md  team.md  uninstall.md
claude-code-plugin/hooks/: hooks.json
claude-code-plugin/scripts/: fetch-badges.mjs  fetch-detailed-stats.mjs  fetch-history.mjs  fetch-leaderboard.mjs  fetch-profile.mjs  fetch-stats.mjs  fetch-team.mjs  statusline.mjs  sync-throttled.mjs  sync.mjs
claude-code-plugin/scripts/lib/: api.mjs  format.mjs  identity.mjs  log-parser.mjs
desktop/: check.ps1  check.sh  org.flatpak.clauderank.yml  package.json  setup.ps1  setup.sh
desktop/scripts/: build_mac.sh
desktop/src/: overlay.html
desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs  tray_render.rs  updater.rs
desktop/src-tauri/src/stats/: browser_cookies.rs  commands.rs  cost.rs  cursor.rs  jsonl.rs  metrics.rs  mod.rs  parser.rs  points.rs  ranking.rs  watcher.rs
server/: .env.example  .gitignore  clauderank.db-shm  clauderank.db-wal  index.ts  package.json  seed-users.ts  test-link-devices.ts  test-multi-device.sh
server/src/: aggregate.ts  auth.ts  concurrency.ts  db.ts  migrate.ts  routes.ts  seed-daily.ts  services.ts
website/: auth-connect.html  auth-connected.html  index.html  leaderboard.html  profile.html  team.html  widget.html
website/css/: style.css
website/js/: api.js  auth.js  avatar.js  burn-clock.js
