[package]
name = "oto-desktop"
version = "0.1.0"
description = "Oto Desktop - Claude Code ranking widget"
authors = ["Frisson Labs"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["fs", "io-util"] }
dirs = "5.0"
chrono = "0.4"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
log = "0.4"
notify = { version = "7", features = ["macos_fsevent"] }
uuid = { version = "1", features = ["v4"] }
open = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
] }
