[package]
name = "clauderank-desktop"
version = "0.2.0"
description = "ClaudeRank Desktop - Claude Code ranking widget"
authors = ["Frisson Labs"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["fs", "io-util"] }
dirs = "5.0"
chrono = "0.4"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
log = "0.4"
notify = "7"
uuid = { version = "1", features = ["v4"] }
open = "5"
arboard = { version = "3", features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png"] }
ab_glyph = "0.2"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
notify = { version = "7", features = ["macos_fsevent"] }
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
] }
